--- a/brand-transformation/package.json
+++ b/brand-transformation/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^10.1.0",
+    "@faker-js/faker": "9",
     "dotenv": "^17.2.3",
     "mongoose": "^8.19.2"
   },
